Ajout de page et choix de catégorie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">exo4</string>
+    <string name="veuillez_choisir_une_cat_gorie">Veuillez choisir une catégorie :</string>
 </resources>
